# Legato.Conduct

./: .gitignore  LICENSE  README.md  legato  pyproject.toml
.github/workflows/: bootstrap.yml  correlate.yml  process-transcript-continue.yml  process-transcript.yml  spawn-from-pit.yml  spawn-project.yml
docs/: README.md
package/: pyproject.toml
package/legato/: __init__.py  classifier.py  cli.py  correlation.py  knowledge.py  projects.py
prompts/: classifier.md  knowledge-extractor.md  project-planner.md  signal-extractor.md  tasker-template.md
scripts/: assign_copilot.py  bootstrap.py  call_claude.py  commit_to_library.py  parse_transcript.py  query_listen.py
templates/chord/: README.md  SIGNAL.md  copilot-instructions.md
templates/chord/.github/workflows/: on-issue-assigned.yml  phase-complete.yml
templates/chord/docs/: architecture.md
templates/chord/init/: bootstrap.md
templates/chord/plans/: phase-01-foundation.md  phase-02-core.md  phase-03-integration.md
templates/note/: README.md  SIGNAL.md  copilot-instructions.md
templates/note/plans/: .gitkeep
